# RailwayRAG

./: README.md  main.py  pyproject.toml  requirements.txt
src/: database.py  ingest.py  main.py  ollama_client.py  rag_prompt.py  scraper.py  utils.py
store/: chunks.json
