[project]
name = "railwayrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain-text-splitters>=1.0.0",
    "orjson>=3.11.4",
    "pypdf>=6.2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.2",
]
